# libcarla

./: .gitignore  CMakeLists.txt  README.md  index.html  public.key
.devcontainer/: Dockerfile  build-libcarla.sh  devcontainer.json
.github/apt-repo/: README.md.template  generate-listings.sh  index.html.template
.github/workflows/: build-and-release.yml  build-examples.yml  publish-apt-repo.yml
cmake/: aarch64-toolchain.cmake  libcarla-config.cmake.in
conf/: distributions  index.html
db/: checksums.db  contents.cache.db  index.html  packages.db  references.db  release.caches.db
dists/: index.html
dists/stable/: InRelease  Release  Release.gpg  index.html
dists/stable/main/: index.html
dists/stable/main/binary-amd64/: Packages  Release  index.html
dists/stable/main/binary-arm64/: Packages  Release  index.html
examples/: .dockerignore  CARLA-SERVER.md  CMakeLists.txt  Dockerfile  Dockerfile.local  Dockerfile.server  Dockerfile.ubuntu24  README.md  build-docker.sh  docker-compose.yml  simple_client.cpp  test-with-server.sh
examples/eabs_demo/: CMakeLists.txt  config.cpp  config.h  cpp_eabs_datacarrier.cpp  cpp_eabs_datacarrier_legacy.cpp  eabs_demo.ini  mqtt_metrics.h
examples/simple_client/: CMakeLists.txt  Dockerfile  Dockerfile.local  Dockerfile.ubuntu24  README.md  build-local-test.sh
pool/: index.html
pool/main/: index.html
pool/main/libc/: index.html
pool/main/libc/libcarla/: index.html  libcarla_0.0.19_amd64.deb  libcarla_0.0.19_arm64.deb  libcarla_0.0.20_amd64.deb  libcarla_0.0.20_arm64.deb  libcarla_0.0.21_amd64.deb  libcarla_0.0.21_arm64.deb  libcarla_0.0.22_amd64.deb  libcarla_0.0.22_arm64.deb  libcarla_0.0.23_amd64.deb  libcarla_0.0.23_arm64.deb  libcarla_0.0.24_amd64.deb  libcarla_0.0.24_arm64.deb  libcarla_0.0.25_amd64.deb  libcarla_0.0.25_arm64.deb  libcarla_0.0.26_amd64.deb  libcarla_0.0.26_arm64.deb  libcarla_0.0.27_amd64.deb  libcarla_0.0.27_arm64.deb  libcarla_0.0.28_amd64.deb  libcarla_0.0.28_arm64.deb  libcarla_0.0.29_amd64.deb  libcarla_0.0.29_arm64.deb  libcarla_0.0.30_amd64.deb  libcarla_0.0.30_arm64.deb  libcarla_0.0.31_amd64.deb  libcarla_0.0.31_arm64.deb  libcarla_0.0.32_amd64.deb  libcarla_0.0.32_arm64.deb  libcarla_0.0.33_amd64.deb  libcarla_0.0.33_arm64.deb  libcarla_0.0.34_amd64.deb  libcarla_0.0.34_arm64.deb  libcarla_0.0.35_amd64.deb  libcarla_0.0.35_arm64.deb  libcarla_0.0.36_amd64.deb  libcarla_0.0.36_arm64.deb  libcarla_0.0.37_amd64.deb  libcarla_0.0.37_arm64.deb  libcarla_0.0.38_amd64.deb  (+15 more)
pool/main/libc/libcarla-example-eabs-demo/: index.html  libcarla-example-eabs-demo_0.0.39_amd64.deb  libcarla-example-eabs-demo_0.0.39_arm64.deb  libcarla-example-eabs-demo_0.0.40+ubuntu24.04_amd64.deb  libcarla-example-eabs-demo_0.0.40+ubuntu24.04_arm64.deb  libcarla-example-eabs-demo_0.0.42+ubuntu24.04_amd64.deb  libcarla-example-eabs-demo_0.0.42+ubuntu24.04_arm64.deb  libcarla-example-eabs-demo_0.0.44+ubuntu22.04_amd64.deb  libcarla-example-eabs-demo_0.0.44+ubuntu22.04_arm64.deb  libcarla-example-eabs-demo_0.0.45+ubuntu22.04_amd64.deb  libcarla-example-eabs-demo_0.0.45+ubuntu22.04_arm64.deb
pool/main/libc/libcarla-example-simple-client/: index.html  libcarla-example-simple-client_0.0.39_amd64.deb  libcarla-example-simple-client_0.0.39_arm64.deb  libcarla-example-simple-client_0.0.40+ubuntu24.04_amd64.deb  libcarla-example-simple-client_0.0.40+ubuntu24.04_arm64.deb  libcarla-example-simple-client_0.0.42+ubuntu24.04_amd64.deb  libcarla-example-simple-client_0.0.42+ubuntu24.04_arm64.deb  libcarla-example-simple-client_0.0.44+ubuntu22.04_amd64.deb  libcarla-example-simple-client_0.0.44+ubuntu22.04_arm64.deb  libcarla-example-simple-client_0.0.45+ubuntu22.04_amd64.deb  libcarla-example-simple-client_0.0.45+ubuntu22.04_arm64.deb
python/: README.md  pyproject.toml
python/source/carla/: __init__.py
scripts/: extract-cmake-deps.sh  fetch-sources.sh
source/carla/road/: Map.cpp
