[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carla"
dynamic = ["version"]
description = "Python API for communicating with the CARLA server."
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "The CARLA team", email = "carla.simulator@gmail.com"},
    {name = "Daniel Glaser", email = ""}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/the78mole/libcarla"
Repository = "https://github.com/the78mole/libcarla"
Issues = "https://github.com/the78mole/libcarla/issues"

[tool.setuptools]
packages = ["carla"]
package-dir = {"" = "source"}

[tool.setuptools.dynamic]
version = {attr = "carla.__version__"}
